add_subdirectory(support)
add_subdirectory(limiter)
add_subdirectory(overlay)
add_subdirectory(planeswap)
add_subdirectory(greyscale)
add_subdirectory(focus)
add_subdirectory(layer)
add_subdirectory(merge)
add_subdirectory(turn)
add_subdirectory(resize)
add_subdirectory(conditional)
add_subdirectory(convert_bits)
add_subdirectory(convert_planar)
add_subdirectory(convert_rgb)
