add_subdirectory(support)
add_subdirectory(bitblt)
add_subdirectory(limiter)
add_subdirectory(overlay)
add_subdirectory(planeswap)
add_subdirectory(greyscale)
add_subdirectory(focus)
add_subdirectory(layer)
add_subdirectory(merge)
add_subdirectory(turn)
add_subdirectory(resize)
add_subdirectory(conditional)
add_subdirectory(convert_bits)
add_subdirectory(convert_planar)
add_subdirectory(convert_rgb)
add_subdirectory(text_overlay)
add_subdirectory(avi_helper)
add_subdirectory(convert_audio)
add_subdirectory(convolution)
add_subdirectory(levels)
add_subdirectory(color)
add_subdirectory(histogram)
add_subdirectory(limiter_filter)
add_subdirectory(greyscale_filter)
add_subdirectory(planeswap_filter)
add_subdirectory(turn_filter)
add_subdirectory(merge_filter)
add_subdirectory(focus_filter)
