add_executable(avi_helper_tests
  avi_helper_tests.cpp
)
target_include_directories(avi_helper_tests PRIVATE
  ${PROJECT_SOURCE_DIR}/tests
  ${PROJECT_SOURCE_DIR}/third_party/AviSynthPlus/avs_core/include
  ${PROJECT_SOURCE_DIR}/third_party/AviSynthPlus/avs_core
  ${PROJECT_BINARY_DIR}/upstream-build/avs_core
  ${xxhash_SOURCE_DIR}
)
target_link_libraries(avi_helper_tests PRIVATE
  GTest::gtest_main
  AvsCoreExternal
)

include(GoogleTest)
gtest_discover_tests(avi_helper_tests TEST_PREFIX "avi_helper.")
