add_executable(expr_filter_tests expr_filter_tests.cpp)
target_include_directories(expr_filter_tests PRIVATE
  ${PROJECT_SOURCE_DIR}/tests
  ${PROJECT_SOURCE_DIR}/third_party/AviSynthPlus/avs_core/include
  ${PROJECT_SOURCE_DIR}/third_party/AviSynthPlus/avs_core
  ${PROJECT_BINARY_DIR}/upstream-build/avs_core
)
target_compile_definitions(expr_filter_tests PRIVATE INTEL_INTRINSICS VS_TARGET_CPU_X86)
target_link_libraries(expr_filter_tests PRIVATE
  GTest::gtest_main
  AvsCoreExternal
)

include(GoogleTest)
gtest_discover_tests(expr_filter_tests TEST_PREFIX "expr_filter.")
